--- a/index.ipynb
+++ b/index.ipynb
@@ -55,12 +55,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Test 1: Do not change variable name!\n",
-    "df = pd.read_csv('spambase.csv', header=Non)"
+    "df = pd.read_csv('spambase.csv', header=None)"
    ]
   },
   {
