--- a/index.ipynb
+++ b/index.ipynb
@@ -1741,7 +1741,65 @@
    "outputs": [],
    "source": [
     "# Test 2: Do not chang variable name!\n",
-    "column_names = None"
+    "column_names = ['word_freq_make',\n",
+    "    'word_freq_address',\n",
+    "    'word_freq_all',     \n",
+    "    'word_freq_3d',           \n",
+    "    'word_freq_our',          \n",
+    "    'word_freq_over',         \n",
+    "    'word_freq_remove',       \n",
+    "    'word_freq_internet',     \n",
+    "    'word_freq_order',        \n",
+    "    'word_freq_mail',         \n",
+    "    'word_freq_receive',      \n",
+    "    'word_freq_will',         \n",
+    "    'word_freq_people',       \n",
+    "    'word_freq_report',       \n",
+    "    'word_freq_addresses',    \n",
+    "    'word_freq_free',         \n",
+    "    'word_freq_business',     \n",
+    "    'word_freq_email',        \n",
+    "    'word_freq_you',          \n",
+    "    'word_freq_credit',       \n",
+    "    'word_freq_your',         \n",
+    "    'word_freq_font',         \n",
+    "    'word_freq_000',          \n",
+    "    'word_freq_money',        \n",
+    "    'word_freq_hp',           \n",
+    "    'word_freq_hpl',          \n",
+    "    'word_freq_george',       \n",
+    "    'word_freq_650',          \n",
+    "    'word_freq_lab',          \n",
+    "    'word_freq_labs',         \n",
+    "    'word_freq_telnet',       \n",
+    "    'word_freq_857',          \n",
+    "    'word_freq_data',         \n",
+    "    'word_freq_415',          \n",
+    "    'word_freq_85',           \n",
+    "    'word_freq_technology',   \n",
+    "    'word_freq_1999',         \n",
+    "    'word_freq_parts',        \n",
+    "    'word_freq_pm',           \n",
+    "    'word_freq_direct',       \n",
+    "    'word_freq_cs',           \n",
+    "    'word_freq_meeting',      \n",
+    "    'word_freq_original',     \n",
+    "    'word_freq_project',      \n",
+    "    'word_freq_re',           \n",
+    "    'word_freq_edu',          \n",
+    "    'word_freq_table',        \n",
+    "    'word_freq_conference',   \n",
+    "    'char_freq_;',            \n",
+    "    'char_freq_(',            \n",
+    "    'char_freq_[',            \n",
+    "    'char_freq_!',            \n",
+    "    'char_freq_$',            \n",
+    "    'char_freq_#',            \n",
+    "    'capital_run_length_average', \n",
+    "    'capital_run_length_longest', \n",
+    "    'capital_run_length_total',\n",
+    "     'is_spam'              \n",
+    "    ]   "
    ]
   },
   {
