--- a/index.ipynb
+++ b/index.ipynb
@@ -2043,10 +2043,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4601 entries, 0 to 4600\n",
+      "Data columns (total 58 columns):\n",
+      "word_freq_make                4601 non-null float64\n",
+      "word_freq_address             4601 non-null float64\n",
+      "word_freq_all                 4601 non-null float64\n",
+      "word_freq_3d                  4601 non-null float64\n",
+      "word_freq_our                 4601 non-null float64\n",
+      "word_freq_over                4601 non-null float64\n",
+      "word_freq_remove              4601 non-null float64\n",
+      "word_freq_internet            4601 non-null float64\n",
+      "word_freq_order               4601 non-null float64\n",
+      "word_freq_mail                4601 non-null float64\n",
+      "word_freq_receive             4601 non-null float64\n",
+      "word_freq_will                4601 non-null float64\n",
+      "word_freq_people              4601 non-null float64\n",
+      "word_freq_report              4601 non-null float64\n",
+      "word_freq_addresses           4601 non-null float64\n",
+      "word_freq_free                4601 non-null float64\n",
+      "word_freq_business            4601 non-null float64\n",
+      "word_freq_email               4601 non-null float64\n",
+      "word_freq_you                 4601 non-null float64\n",
+      "word_freq_credit              4601 non-null float64\n",
+      "word_freq_your                4601 non-null float64\n",
+      "word_freq_font                4601 non-null float64\n",
+      "word_freq_000                 4601 non-null float64\n",
+      "word_freq_money               4601 non-null float64\n",
+      "word_freq_hp                  4601 non-null float64\n",
+      "word_freq_hpl                 4601 non-null float64\n",
+      "word_freq_george              4601 non-null float64\n",
+      "word_freq_650                 4601 non-null float64\n",
+      "word_freq_lab                 4601 non-null float64\n",
+      "word_freq_labs                4601 non-null float64\n",
+      "word_freq_telnet              4601 non-null float64\n",
+      "word_freq_857                 4601 non-null float64\n",
+      "word_freq_data                4601 non-null float64\n",
+      "word_freq_415                 4601 non-null float64\n",
+      "word_freq_85                  4601 non-null float64\n",
+      "word_freq_technology          4601 non-null float64\n",
+      "word_freq_1999                4601 non-null float64\n",
+      "word_freq_parts               4601 non-null float64\n",
+      "word_freq_pm                  4601 non-null float64\n",
+      "word_freq_direct              4601 non-null float64\n",
+      "word_freq_cs                  4601 non-null float64\n",
+      "word_freq_meeting             4601 non-null float64\n",
+      "word_freq_original            4601 non-null float64\n",
+      "word_freq_project             4601 non-null float64\n",
+      "word_freq_re                  4601 non-null float64\n",
+      "word_freq_edu                 4601 non-null float64\n",
+      "word_freq_table               4601 non-null float64\n",
+      "word_freq_conference          4601 non-null float64\n",
+      "char_freq_;                   4601 non-null float64\n",
+      "char_freq_(                   4601 non-null float64\n",
+      "char_freq_[                   4601 non-null float64\n",
+      "char_freq_!                   4601 non-null float64\n",
+      "char_freq_$                   4601 non-null float64\n",
+      "char_freq_#                   4601 non-null float64\n",
+      "capital_run_length_average    4601 non-null float64\n",
+      "capital_run_length_longest    4601 non-null int64\n",
+      "capital_run_length_total      4601 non-null int64\n",
+      "is_spam                       4601 non-null int64\n",
+      "dtypes: float64(55), int64(3)\n",
+      "memory usage: 2.0 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
   },
   {
    "cell_type": "code",
