Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2125,7 +2125,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.descri"
+   ]
   },
   {
    "cell_type": "code",
