--- a/index.ipynb
+++ b/index.ipynb
@@ -2442,11 +2442,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.39404477287546186"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.corr()"
+    "df['is_spam'].sum() / len(df['is_spam'])"
    ]
   },
   {
