Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2474,7 +2474,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sns.heatmap(df.corr())"
+   ]
   },
   {
    "cell_type": "markdown",
