Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2564,7 +2564,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = None\n"
+    "clf = GaussianNB()\n",
+    "clf.fit(X_train, y_train)"
    ]
   },
   {
