Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2592,11 +2592,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds = None"
+    "preds = clf.predict(X_test)"
    ]
   },
   {
