--- a/index.ipynb
+++ b/index.ipynb
@@ -2619,10 +2619,10 @@
    "outputs": [],
    "source": [
     "# Test 5: Do not change variable name!\n",
-    "accuracy = None\n",
+    "accuracy = accuracy_score(y_test, preds)\n",
     "\n",
     "# Test 6: Do not change variable name!\n",
-    "f1 = None\n",
+    "f1 = f1_score(y)\n",
     "\n",
     "print(\"Accuracy Score for model: {:.4}%\".format(accuracy * 100))\n",
     "print(\"F1 Score for model: {:.4}%\".format(f1 * 100))"
